Updated System Structure

--- a/index.ipynb
+++ b/index.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2101,7 +2101,7 @@
    ],
    "source": [
     "# Example user input\n",
-    "user_input = \"milk\"\n",
+    "user_input = \"wheat\"\n",
     "\n",
     "# Get recommendations\n",
     "recommended_recipes = recommend_recipes(user_input, combined_df)\n",
@@ -2155,7 +2155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
