--- a/index.ipynb
+++ b/index.ipynb
@@ -3093,6 +3093,18 @@
    "source": [
     "- Based on the above, the system works in a way that when a user enters a specific title of a food like \"mandazi\" it returns all instances where the food title is seen otherwise, if the user enters ingredients, it converts the user input to a vector then performs the cosine similarity. Afterwards, it returns recipes of the top foods with highest cosine similarities."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This system works accordingly in recommending the recipes to cook.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
