--- a/index.ipynb
+++ b/index.ipynb
@@ -33,7 +33,7 @@
     "## Business Understanding\n",
     "\n",
     "### Business Description \n",
-    "Tasty Dishes is a web-based culinary platform dedicated to sharing authentic African recipes with the world. Our mission is to enhance the cooking experience of home chefs by providing them with a diverse collection of recipes rooted in African culinary traditions, while also incorporating global influences. Whether you're an experienced cook or just starting, Tasty Dishes offers a wide variety of recipes that empower users to create delicious, flavorful meals from the comfort of their homes.\n",
+    "The Boma Pot is a web-based culinary platform dedicated to sharing authentic African recipes with the world. Our mission is to enhance the cooking experience of home chefs by providing them with a diverse collection of recipes rooted in African culinary traditions, while also incorporating global influences. Whether you're an experienced cook or just starting, Tasty Dishes offers a wide variety of recipes that empower users to create delicious, flavorful meals from the comfort of their homes.\n",
     "\n",
     "\n",
     "## Business Goal \n",
@@ -44,25 +44,7 @@
     "\n",
     "1. Ingredient-Based Recommendations: Develop an algorithm that analyzes user-provided ingredients to recommend recipes based on ingredient similarity, leveraging a diverse dataset that includes recipe_Title, Ingredients, and Instructions for authentic African and global dishes.\n",
     "\n",
-    "2. User-Friendly Interface: Design an intuitive web interface that enables users to input their available ingredients and view tailored recipe recommendations, along with detailed cooking instructions and a feedback mechanism to enhance recommendation accuracy.\n",
-    "\n",
-    "\n",
-    "### Success Criteria\n",
-    "1. Accuracy:\n",
-    "Achieve at least 80% accuracy in recommending relevant recipes based on user-provided ingredients.\n",
-    "\n",
-    "2. Precision:\n",
-    "Ensure that at least 75% of recommended recipes correspond to the user’s input ingredients.\n",
-    "\n",
-    "3. Recall:\n",
-    "Aim for a recall rate of at least 70%, indicating the system identifies a significant portion of relevant recipes.\n",
-    "\n",
-    "4. F1 Score:\n",
-    "Target an F1 score of 0.75 or higher, balancing precision and recall for comprehensive recommendations.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "2. User-Friendly Interface: Design an intuitive web interface that enables users to input their available ingredients and view tailored recipe recommendations, along with detailed cooking instructions and a feedback mechanism to enhance recommendation accuracy."
    ]
   },
   {
